--- a/SimpleTodo/Resources/Base.lproj/Main.storyboard
+++ b/SimpleTodo/Resources/Base.lproj/Main.storyboard
@@ -42,7 +42,7 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <outlet property="contentsCell" destination="hsO-sL-vx2" id="BXq-Lt-94f"/>
+                                            <outlet property="contentLabel" destination="hsO-sL-vx2" id="BXq-Lt-94f"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -108,12 +108,12 @@
                         <barButtonItem key="rightBarButtonItem" image="Icon-Save" id="Iim-7w-VAg">
                             <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
-                                <action selector="save:" destination="Udq-bY-c0k" id="aH4-3u-rVR"/>
+                                <action selector="save:" destination="Udq-bY-c0k" id="nI0-ps-aNA"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="contentView" destination="1b8-vI-8JG" id="Rt0-Lh-Pta"/>
+                        <outlet property="contentView" destination="2bQ-0i-qm1" id="OOe-CW-umP"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Gwr-iX-t2i" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -144,7 +144,7 @@
                 <navigationController storyboardIdentifier="MemoComposeViewController" automaticallyAdjustsScrollViewInsets="NO" id="Kat-ma-JAI" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="wOh-M0-KD2">
-                        <rect key="frame" x="0.0" y="44" width="414" height="104.5"/>
+                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
